finbanking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finbanking-api-service
spec:
  type: LoadBalancer
  selector:
    app: finbanking-api
  ports:
    - port: 80
      targetPort: 8080
