k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finbanking-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finbanking-api
  template:
    metadata:
      labels:
        app: finbanking-api
    spec:
      containers:
      - name: finbanking-api
        image: dbankingacr.azurecr.io/finbanking-api:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: finbanking-api-service
spec:
  type: LoadBalancer
  selector:
    app: finbanking-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
