finbanking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finbanking-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: finbanking.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finbanking-api
            port:
              number: 80
